# python-project-lvl1

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: cli.py  engine.py  game.py  greetings.py
brain_games/games/: brain_calc_game.py  brain_even_game.py  brain_gcd_game.py  brain_prime_game.py  brain_progression_game.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
xsl1px_brain_games.egg-info/: PKG-INFO  SOURCES.txt
