[tool.poetry]
name = "xsl1px_brain_games"
version = "0.1.2"
description = ""
authors = ["Pavel Grigoryev <tipaslish@inbox.ru>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"
flake8 = "^3.8.2"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

